fix: 使用 GOTOOLCHAIN=auto 解决 xray-core 依赖问题

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,6 +53,7 @@ jobs:
           GOOS: ${{ matrix.goos }}
           GOARCH: ${{ matrix.goarch }}
           VERSION: ${{ steps.version.outputs.VERSION }}
+          GOTOOLCHAIN: auto
         run: |
           EXT=""
           if [ "$GOOS" = "windows" ]; then
